fixed gaps

--- a/css/contact.css
+++ b/css/contact.css
@@ -25,3 +25,7 @@
 .flex_container-contact p {
   margin: 0 10%;
 }
+
+.flex-item_contact-1 h2 {
+  margin-top: 1rem;
+}
