--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
   text-align: center;
 }
 
@@ -65,14 +64,9 @@ ul {
   padding: 2rem;
   border-radius: 7px;
   align-items: center;
+  margin-top: 3rem;
 }
 
-
-
-
-.text__color-orange {
-  color: #fc826a;
-}
 
 img {
   display: block;
@@ -163,7 +157,7 @@ footer {
   color: white;
   display: flex;
   flex-direction: column;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .footer_container {
