--- a/css/visit.css
+++ b/css/visit.css
@@ -8,7 +8,6 @@
  
   justify-content: space-around;
   color: var(--color-main);
-  padding: 3rem;
 }
 
 .flex_container-visit > * {
